# Flet-base

./: LICENSE  README.md  pyproject.toml
components/: __init__.py  buttons.py  data_display.py  inputs.py  modals.py  texts.py
examples/: burguer_test.py  components_test.py  general_test.py  layout_test.py  router_test.py  shortcuts_test.py  theme_test.py  translation_test.py  translations.csv  windows_topbar_test.py
flet_base/: config.py
flet_base/components/: buttons.py  data_display.py  inputs.py  modals.py  texts.py
flet_base/keyboard_shortcuts/: __init__.py  shortcuts.py
flet_base/layout/: __init__.py  responsive_auto_layout.py
flet_base/router/: __init__.py  data.py  page.py  router.py  shell.py  utils.py
flet_base/themes/: themes.py
flet_base/translations/: __init__.py  translations.py
layout/: __init__.py  responsive_auto_layout.py
router/: middleware.py  router.py
themes/: __init__.py  themes.py
translations/: __init__.py  translations.csv  translations.py
