[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flet-base"
version = "0.1.0"
description = "A premium starter kit for building multi-platform applications with Python and Flet."
authors = [
    {name = "PerezSJuan"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet",
    "flet_datatable2",
    "flet_color_pickers",
]

[tool.setuptools]
packages = ["flet_base", "flet_base.components", "flet_base.layout", "flet_base.router", "flet_base.themes", "flet_base.translations"]


[tool.setuptools.package-data]
translations = ["*.csv"]